force-app/main/default/objects/Education_RR__c/Education_RR__c.object-meta.xml
<CustomObject>
    <label>Education Reimbursement Request</label>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Education Reimbursement Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Reimbursement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>