force-app/main/default/objects/Education_RR__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <description>Amount to be reimbursed</description>
    <inlineHelpText>Amount to be reimbursed</inlineHelpText>
    <label>Amount Requested</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>