force-app/main/default/objects/Education_RR__c/fields/Attachments_ok__c.field-meta.xml
<CustomField>
    <fullName>Attachments_ok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments ok</label>
    <type>Checkbox</type>
</CustomField>