force-app/main/default/objects/Education_RR__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor level (or higher) program</fullName>
            </value>
            <value>
                <fullName>Certification or Accreditation</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Executive Development Program</fullName>
            </value>
            <value>
                <fullName>Language Course</fullName>
            </value>
            <value>
                <fullName>Professional Association Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>