force-app/main/default/objects/Education_RR__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>The date of the end of the training.</description>
    <inlineHelpText>The date of the end of the training.</inlineHelpText>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>