force-app/main/default/objects/Education_RR__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <length>32</length>
    <type>Text</type>
</CustomField>