force-app/main/default/objects/Education_RR__c/fields/Proof_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_completion__c</fullName>
    <label>Proof of completion</label>
    <length>32</length>
    <type>Text</type>
</CustomField>