force-app/main/default/objects/Education_RR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Amount_Requested__c</columns>
    <columns>Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>